# master_thesis

./: Dockerfile  grid_search_results.csv  pyproject.toml
src/: LGBM_approach.py  SGCN_approach.py  dataset.py  main.py  plots.py
